# Myo-Fitness

./: .env.root.example  .gitignore  ONBOARDING.md  README.md  Taskfile.yml  docker-compose.yml  package-lock.json  package.json  todo.md
.agent/: PROJECT_CONTEXT.md
.gemini/: session-edit-feature.md
api/: .env.example  GUIDE_SEED_EXERCICES.md  INSTALLATION_SEED_CSV.md  README.md  (+5 more)
myo_datas/: Makefile  README.md  README_AI_PIPELINE.md  pyproject.toml
myo_datas/apps/: recommend_app.py
myo_datas/docs/: mkdocs.yml
myo_datas/docs/docs/: index.md
myo_datas/myo_datas/: __init__.py  dataset.py  features.py  plots.py
myo_datas/myo_datas/modeling/: predict.py  train.py
myo_datas/notebooks/: annotated_top_exercises.ipynb  clean_program_summary.ipynb  clean_programs_detailed.ipynb  convert_csvs_to_parquet.ipynb  eda_and_clean_all.ipynb  eda_visual_report.ipynb  generate_exercise_canonical.ipynb  rank_exercises_by_profile.ipynb  refine_and_merge_exercise_mapping.ipynb
myo_datas/outputs/exercise_recommendations/: annotated_top_exercises.md  exercise_stats.csv  summary_report.md  top_exercises_age_18-30_gender_Female.csv  top_exercises_age_18-30_gender_Male.csv  top_exercises_age_31-45_gender_Female.csv  top_exercises_age_31-45_gender_Male.csv  top_exercises_age_46-60_gender_Female.csv  top_exercises_age_46-60_gender_Male.csv  top_exercises_age_60+_gender_Female.csv  top_exercises_age_60+_gender_Male.csv  top_exercises_age_<18_gender_Female.csv  top_exercises_age_<18_gender_Male.csv  top_exercises_overall.csv
myo_datas/scripts/: clean_raw_csvs.py  ingest_events.py
(+706 files in other folders)
